Test post value - remame index.php back to .html and post to separate php file

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div id="reset" class="button reset">AC</div>
         <form action="save_calc.php" method="post">
         <div class="button save">
-          <input type="text" id="post-answer" value="0" />
+          <input type="hidden" id="post-answer" name="post-answer" value="0" />
           <input type="submit" id="save" value="SAVE" />
         </div>
         </form>
