Capturing and adding sum, ip address, date and broswer into csv file

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
         <form action="save_calc.php" method="post">
         <div class="button save">
           <input type="hidden" id="post-answer" name="post-answer" value="0" />
+          <input type="hidden" id="browser" name="browser" value="" />
           <input type="submit" id="save" value="SAVE" />
         </div>
         </form>
