Add go to calculations and go to home page links

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,8 @@
         <div id="9" class="button">9</div>
         <div id="equals" class="button operator">=</div>      
     </div>
-  </section>  
+    <p><a href="calculations.php">See saved calculations</a></p>
+  </section>
 </body>
 </html>
 
