--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,13 @@
     </div>
     <div class="keypad">      
         <div id="reset" class="button reset">AC</div>
+        <!-- Form to submit and save values -->
         <form action="save_calc.php" method="post">
-        <div class="button save">
-          <input type="hidden" id="post-answer" name="post-answer" value="0" />
-          <input type="hidden" id="browser" name="browser" value="" />
-          <input type="submit" id="save" value="SAVE" />
-        </div>
+          <div class="button save">
+            <input type="hidden" id="post-answer" name="post-answer" value="0" />
+            <input type="hidden" id="browser" name="browser" value="" />
+            <input type="submit" id="save" value="SAVE" />
+          </div>
         </form>
         <div id="divide" class="button operator">&#247;</div>      
         <div id="decimal" class="button">.</div>
@@ -41,7 +42,17 @@
         <div id="9" class="button">9</div>
         <div id="equals" class="button operator">=</div>      
     </div>
-    <p><a href="calculations.php">See saved calculations</a></p>
+    <p><a href="calculations.php">See saved calculations</a></p>  
+  </section>
+  <section class="notes">
+    <h3>Notes</h3>
+    <ul>
+      <li>Module Bundler: Webpack 4</li>
+      <li>Languages used: HTML, SCSS / CSS, JavaScript, jQuery, PHP</li>
+      <li>I have coded the save functionality in the save_calc.php which then rediects back to the index page. This could also have been done within the index page if required.</samp></li>
+      <li>To view and use the calculator, you can just drag the index.html into the browser from the dist folder</li>
+      <li>For saving and viewing the saved sums, you will need to run it on a PHP server</li>
+    </ul>
   </section>
 </body>
 </html>
