--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,15 @@
       <li>To view and use the calculator, you can just drag the index.html into the browser from the dist folder</li>
       <li>For saving and viewing the saved sums, you will need to run it on a PHP server</li>
     </ul>
+    <h3>Timings</h3>
+    <p>This was mostly done when i had some free time at work and a little on Sunday evening</p>
+    <ul>
+      <li>Webpack setup: 45 mins (Webpack 4 is a new version, so needed some research into certain aspects)</li>
+      <li>HTML and SCSS: 1.5 hours</li>
+      <li>JavaScript: 2 hours</li>
+      <li>PHP: 2 hours</li>
+      <li>Total coding time: 5.5 hours</li>
+    </ul>    
   </section>
 </body>
 </html>
-
