Minor styling updates and removed the default 0

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <body>
   <section class="calculator">
     <div class="display">
-      <div id="calculation">0</div>
+      <div id="calculation"></div>
       <div id="answer">0</div>
     </div>
     <div class="keypad">      
